--- a/Jenkins/S_JENKINS_03 Lab 3/Jenkinsfile
+++ b/Jenkins/S_JENKINS_03 Lab 3/Jenkinsfile
@@ -2,10 +2,10 @@
 
 pipeline {
      agent any
-    parameters {
-        booleanParam(name:'project', defaultValue: true, description:'this paramater help you to know project name')
-        choice(name: 'namespace', choices:['dev','prod','stage'], description: '' ) 
-    }
+//     parameters {
+//         booleanParam(name:'project', defaultValue: true, description:'this paramater help you to know project name')
+//         choice(name: 'namespace', choices:['dev','prod','stage'], description: '' ) 
+//     }
 
     stages {
         stage('check') {
